# Species_classification

./: README.md  classification.ipynb  index.html  main.py  pyproject.toml
model/: model.pkl
